--- a/briar-android/src/main/res/layout/fragment_alias_dialog.xml
+++ b/briar-android/src/main/res/layout/fragment_alias_dialog.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="wrap_content"
+	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	android:padding="16dp">
 
 	<TextView
 		android:id="@+id/titleView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:padding="16dp"
 		android:text="@string/set_contact_alias"
 		android:textColor="?android:attr/textColorPrimary"
 		android:textSize="@dimen/text_size_large"
@@ -20,8 +19,7 @@
 		android:id="@+id/aliasEditText"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="16dp"
-		android:layout_marginRight="16dp"
+		android:layout_marginTop="16dp"
 		android:hint="@string/set_contact_alias_hint"
 		android:inputType="textPersonName"
 		android:textColor="?android:attr/textColorPrimary"
@@ -30,8 +28,9 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:paddingLeft="16dp"
-		android:paddingRight="16dp"
+		android:layout_marginLeft="@dimen/margin_xxlarge"
+		android:layout_marginStart="@dimen/margin_xxlarge"
+		android:gravity="end"
 		android:orientation="horizontal">
 
 		<Button
@@ -39,7 +38,6 @@
 			style="@style/BriarButtonFlat.Negative"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_weight="1"
 			android:text="@string/cancel"/>
 
 		<Button
@@ -47,7 +45,6 @@
 			style="@style/BriarButtonFlat.Positive"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_weight="1"
 			android:text="@string/set_alias"/>
 
 	</LinearLayout>
