--- a/briar-android/src/main/res/layout/fragment_link_dialog.xml
+++ b/briar-android/src/main/res/layout/fragment_link_dialog.xml
@@ -1,75 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:layout_height="wrap_content"
+	android:orientation="vertical"
+	android:padding="16dp">
+
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:text="@string/link_warning_title"
+		android:textColor="?android:attr/textColorPrimary"
+		android:textSize="@dimen/text_size_large"
+		android:textStyle="bold"/>
+
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/margin_large"
+		android:text="@string/link_warning_intro"
+		android:textColor="?android:attr/textColorPrimary"
+		android:textSize="@dimen/text_size_medium"/>
+
+	<TextView
+		android:id="@+id/urlView"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/margin_large"
+		android:textColor="?android:attr/textColorPrimary"
+		android:textIsSelectable="true"
+		android:textSize="@dimen/text_size_medium"
+		android:typeface="monospace"
+		tools:text="http://very.bad.site.com"/>
+
+	<TextView
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/margin_large"
+		android:text="@string/link_warning_text"
+		android:textColor="?android:attr/textColorPrimary"
+		android:textSize="@dimen/text_size_medium"/>
 
 	<LinearLayout
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:orientation="vertical"
-		android:padding="@dimen/margin_large">
-
-		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="@string/link_warning_title"
-			android:textColor="?android:attr/textColorPrimary"
-			android:textSize="@dimen/text_size_large"
-			android:textStyle="bold"/>
-
-		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/margin_large"
-			android:text="@string/link_warning_intro"
-			android:textColor="?android:attr/textColorPrimary"
-			android:textSize="@dimen/text_size_medium"/>
-
-		<TextView
-			android:id="@+id/urlView"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/margin_large"
-			android:textIsSelectable="true"
-			android:typeface="monospace"
-			tools:text="http://very.bad.site.com"/>
-
-		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/margin_large"
-			android:text="@string/link_warning_text"
-			android:textColor="?android:attr/textColorPrimary"
-			android:textSize="@dimen/text_size_medium"/>
-
-	</LinearLayout>
-
-	<android.support.constraint.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/button_size">
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/margin_xxlarge"
+		android:layout_marginStart="@dimen/margin_xxlarge"
+		android:gravity="end"
+		android:orientation="horizontal">
 
 		<Button
 			android:id="@+id/cancelButton"
 			style="@style/BriarButtonFlat.Positive"
-			android:layout_width="0dp"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/cancel"
-			app:layout_constraintEnd_toStartOf="@+id/openButton"
-			app:layout_constraintStart_toStartOf="parent"/>
+			android:text="@string/cancel"/>
 
 		<Button
 			android:id="@+id/openButton"
 			style="@style/BriarButtonFlat.Negative"
-			android:layout_width="0dp"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/link_warning_open_link"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toEndOf="@+id/cancelButton"/>
+			android:text="@string/link_warning_open_link"/>
 
-	</android.support.constraint.ConstraintLayout>
+	</LinearLayout>
 
 </LinearLayout>
