--- a/briar-android/src/main/res/values/dimens.xml
+++ b/briar-android/src/main/res/values/dimens.xml
@@ -43,9 +43,18 @@
 	<dimen name="message_bubble_radius_top_inner">@dimen/message_bubble_radius_small</dimen>
 	<dimen name="message_bubble_radius_top_outer">@dimen/message_bubble_radius_big</dimen>
 	<dimen name="message_bubble_margin">6dp</dimen>
+	<dimen name="message_bubble_image_default">210dp</dimen>
+	<dimen name="message_bubble_image_min_width">150dp</dimen>
+	<dimen name="message_bubble_image_max_width">240dp</dimen>
+	<dimen name="message_bubble_image_min_height">100dp</dimen>
+	<dimen name="message_bubble_image_max_height">320dp</dimen>
+	<dimen name="message_bubble_border">2dp</dimen>
 	<dimen name="message_bubble_padding_sides">12dp</dimen>
+	<dimen name="message_bubble_padding_sides_inner">10dp</dimen>
 	<dimen name="message_bubble_padding_top">6dp</dimen>
+	<dimen name="message_bubble_padding_top_inner">4dp</dimen>
 	<dimen name="message_bubble_padding_bottom">4dp</dimen>
+	<dimen name="message_bubble_padding_bottom_inner">2dp</dimen>
 	<dimen name="message_bubble_timestamp_margin">4dp</dimen>
 	<dimen name="message_bubble_elevation">2dp</dimen>
 	<dimen name="message_bubble_margin_tail">8dp</dimen>
