--- a/briar-android/src/main/res/layout/fragment_alias_dialog.xml
+++ b/briar-android/src/main/res/layout/fragment_alias_dialog.xml
@@ -47,7 +47,7 @@
 			style="@style/BriarButtonFlat.Positive"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:text="@string/set_alias"/>
+			android:text="@string/set_alias_button"/>
 
 	</LinearLayout>
 
