--- a/briar-android/src/main/res/layout/text_input_view_large.xml
+++ b/briar-android/src/main/res/layout/text_input_view_large.xml
@@ -64,6 +64,7 @@
 		android:layout_marginEnd="@dimen/margin_small"
 		android:layout_marginLeft="@dimen/margin_small"
 		android:layout_marginRight="@dimen/margin_small"
-		android:layout_marginStart="@dimen/margin_small"/>
+		android:layout_marginStart="@dimen/margin_small"
+		tools:text="@string/send"/>
 
 </merge>
