--- a/briar-android/src/main/res/values/dimens.xml
+++ b/briar-android/src/main/res/values/dimens.xml
@@ -70,6 +70,7 @@
 
 	<!-- Emoji -->
 	<dimen name="text_input_height">42dp</dimen>
+	<dimen name="text_input_image_height">150dp</dimen>
 	<dimen name="conversation_item_body_text_size">16sp</dimen>
 	<dimen name="emoji_drawer_size">32sp</dimen>
 	<dimen name="emoji_drawer_indicator_height">2dp</dimen>
