--- a/briar-android/src/main/res/layout/list_item_image.xml
+++ b/briar-android/src/main/res/layout/list_item_image.xml
@@ -5,5 +5,6 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="@dimen/message_bubble_image_default"
 	android:layout_height="@dimen/message_bubble_image_default"
+	android:scaleType="centerCrop"
 	tools:ignore="ContentDescription"
-	tools:src="@drawable/alerts_and_states_error"/>
+	tools:srcCompat="@tools:sample/avatars"/>
