--- a/briar-android/src/main/res/layout/fragment_message.xml
+++ b/briar-android/src/main/res/layout/fragment_message.xml
@@ -5,6 +5,7 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	app:allowEmptyText="true"
 	app:buttonText="@string/forum_share_button"
 	app:fillHeight="true"
 	app:hint="@string/forum_share_message"/>
