--- a/briar-android/src/main/res/values/attrs.xml
+++ b/briar-android/src/main/res/values/attrs.xml
@@ -19,6 +19,12 @@
 		</attr>
 	</declare-styleable>
 
+	<declare-styleable name="EmojiTextInputView">
+		<attr name="textPaddingBottom" format="dimension"/>
+		<attr name="textPaddingEnd" format="dimension"/>
+		<attr name="maxTextLines" format="integer"/>
+	</declare-styleable>
+
 	<declare-styleable name="TextInputView">
 		<attr name="hint" format="string"/>
 		<attr name="allowEmptyText" format="boolean"/>
